Fix poster controls visibility

--- a/src/pages/Film/components/Media/Media.module.css
+++ b/src/pages/Film/components/Media/Media.module.css
@@ -24,7 +24,8 @@
 
 @media (max-width: 580px) {
   .media {
-    position: static;
+    position: relative;
+    top: 0;
     width: 100%;
   }
   .modalContent {
